visibility correct

--- a/css/style.css
+++ b/css/style.css
@@ -28,24 +28,31 @@ body {
 }
 h1 {
   align-items: center;
-  color: #c43b16;
+  color: #0f0401;
   font-style: bold;
   font-weight: 700;
+  text-shadow: #0f0401;
+  text-decoration: solid;
   display: flex;
   flex-direction: row;
-  height: 100px;
   justify-content: center;
+
+}
+#msg-container{
+  background-color: rgba(247, 237, 237, 0.733);
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+
 }
 h3 {
-  background-color: gray;
   outline-width: 15px;
   border-color: black;
   align-items: center;
   display: flex;
   flex-direction: row;
-  height: 30px;
   justify-content: center;
-  margin-bottom: 50px;
+  padding: 10px;
 }
 div.battle {
   align-items: center; 
@@ -103,7 +110,9 @@ h6 {
 @media only screen and (min-width: 600px){
   body {
   width: 900px;
-  display: grid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   grid-template-columns: 40% 60%;
   grid-template-rows: auto auto auto auto;
   grid-template-areas: 
